Set all BuildTarget capabilities to true and return dependency source JARs
Match Bloop's behavior: set canTest, canRun, canDebug all to true
unconditionally (Metals uses canRun && canTest for the Debugging column).

Implement handleDependencySources to return actual source JARs from
resolution metadata instead of empty lists, enabling go-to-definition
on external library types.

Note: Interactive ❌ for Java targets is hardcoded in Metals (no Java
presentation compiler) — not fixable from BSP server side.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>